fixed weather on mobile

--- a/ownStyle.css
+++ b/ownStyle.css
@@ -37,6 +37,7 @@ main.closedmenu{
     border-radius: 0.4rem;
     background: #336699;
     color: white;
+    margin-right: 0.5rem;
 }
 #weatherImg img {
     width: 40%;
@@ -67,6 +68,7 @@ main.closedmenu{
     height: 100%;
     display: inline-block;
     margin-top: -0.22rem;
+    margin-right: 0.5rem;
 
 }
 #totalScore{
@@ -104,6 +106,8 @@ table {
 table td, table th {
     padding: 8px;
     color: white;
+    border:0.25rem solid white;
+    border-radius: 0.5rem;
 }
 
 table tr{
